<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:fillViewport="true"
  tools:context=".views.fragments.BookmarksFragment">

  <com.google.android.material.appbar.AppBarLayout
    android:id="@+id/appbarLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorSurface"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingStart="@dimen/horizontal_space1"
      android:paddingTop="@dimen/vertical_space2"
      android:paddingEnd="@dimen/horizontal_space1"
      android:paddingBottom="@dimen/vertical_space2"
      android:text="@string/heading_your_bookmarks"
      android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
      app:layout_scrollFlags="noScroll" />
  </com.google.android.material.appbar.AppBarLayout>

  <androidx.core.widget.NestedScrollView
    android:layout_width="0dp"
    android:layout_height="0dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/appbarLayout">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">

      <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.progressindicator.CircularProgressIndicator
          android:id="@+id/progressSearching"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/progress_horizontal_space"
          android:layout_marginBottom="@dimen/progress_horizontal_space"
          android:indeterminate="true"
          android:visibility="gone"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          tools:visibility="visible" />
      </androidx.constraintlayout.widget.ConstraintLayout>

      <LinearLayout
        android:id="@+id/layoutLabelOops"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/progress_horizontal_space"
        android:layout_marginBottom="@dimen/progress_horizontal_space"
        android:orientation="vertical">

        <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/bookmarks_oops1"
          android:textAlignment="center"
          android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />

        <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/bookmarks_oops2"
          android:textAlignment="center"
          android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />
      </LinearLayout>

      <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewBookmarks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="@dimen/horizontal_space3"
        android:paddingTop="@dimen/vertical_space3"
        android:paddingEnd="@dimen/horizontal_space3"
        android:paddingBottom="@dimen/vertical_space3"
        tools:visibility="gone" />
    </LinearLayout>
  </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
